Update projects & fix animation whitespace.

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,13 +23,22 @@ html, body {
 #everything {
   min-height:100%;
   position:relative;
+  box-sizing:border-box;
+  padding-bottom:200px;
 }
 
 #beach-container {
    position:absolute;
    bottom:0;
+   left:0;
    width:100%;
-   height:200px;   /* Height of the footer */
+   height:200px;
+}
+
+#beach {
+  display:block;
+  width:100%;
+  height:100%;
 }
 
 #initials {
@@ -43,7 +52,6 @@ html, body {
   height:300px;
   width: 300px;
   margin-top: 15%;
-  #box-shadow: 0 0 4px 4px white inset;
   background-size: cover;
 }
 
